create github pages

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/k">develop own website</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -345,12 +345,10 @@
                     Get monthly updates and free resources.
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
-                    <div data-form-alert="" hidden="" class="align-center">
-                        Thanks for filling out the form!
-                    </div>
+                    <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="c9yWtYIR8NJkr8VLQWHg5pOYrI/4XRIUJTAGJoa21wobXwK+xViQ7h6hvyZlRRbemvvYpy5z8grJC7ICbDSHYe8BgTe/sy7VflNcH61EVjzN8P0RQuBIO3TVDuT1xQm0" data-form-email="true">
+                        <input type="hidden" value="git8agLcwbROfHdFPJ5qsfM1qs3/sLvwSKaV71w4p351++jWtwbaTC2N9M8I4DqTJsiX/X+2ZUFHGGfN7bHdt16zkn47bLR7H1QWXTGnhnHX6A0wAsNSP6kns2LQ2JwU" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
