--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">landing page html templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/a">Mobirise alternative</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5kf/ItTcSNw9S+W5JxiSjyYFKAI6Y+a/cZK6oHMsHk76/b32TIxyfobEe1njGhT0CNP8f8ji7Lm9TguGIKPCllfAaZDcAMlVSY5kJ0g3D41IPYfQRhEyatGUgR3swqQH" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N+NMjxGaJClgwatA6pfB9gEBC4g7FbECb9sKVbsQgpurITYedGItJNhyAWeVJo3FbVrOFKpyO/xvUYnpdIPpfFp+6hJbyjoI6+I/JFe7Sykc2jn3R2a4vgrYzbBsTFxr" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="M6XBC/go5doH0hqxWEF0NSNZnu3jhkO+Z0CtYagamiadlIP/lXuKQUQq1BolQBPcrwt2e79X+Lo7/JdIzGpBL5kATq6OwbYM1sphMtZSmAeXBXiOF0Ca4+YYrjsVkAPv" data-form-email="true">
+                        <input type="hidden" value="cIVAmDqpnEMOJCxUrlkFXLVvB3ZYofqJTG9lLPpGGy/HGgviasCvgF3bVChcnS1DFnZpp+QG7lXO79smoRXrWqGYMbjWDb8oz9msdJ51SBTufmEmsq4s1bzsjzQs+Nyi" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
