create github pages

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop own website</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/k">how to develop own website</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -150,8 +150,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">
-                    About Us</h1>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><span style="font-weight: normal;">
+                    About Us</span></h1>
                 
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5"><em>"We at Theta Robotics have always taken pride in reducing the technical gap with designing smart devices so as to achieve more connected world and be a promising face in this age of intelligence and modern robotics."</em></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="page2.html">Know More<br></a></div>
@@ -348,7 +348,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="git8agLcwbROfHdFPJ5qsfM1qs3/sLvwSKaV71w4p351++jWtwbaTC2N9M8I4DqTJsiX/X+2ZUFHGGfN7bHdt16zkn47bLR7H1QWXTGnhnHX6A0wAsNSP6kns2LQ2JwU" data-form-email="true">
+                        <input type="hidden" value="32vHvTM9xxHGIRx7WIaBoZxkB9pvPe9WFbs5xy2Z9WqWWo9mbUOc2sCANWu2YqSgynR5dIIWokIqzeyZMO+Da/OusvCX4KgmGddWyB1LoJza2/Evam0fPXyenqSFez1l" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
