--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
-                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page11.html">
                         Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">how to develop own website</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -348,7 +348,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="32vHvTM9xxHGIRx7WIaBoZxkB9pvPe9WFbs5xy2Z9WqWWo9mbUOc2sCANWu2YqSgynR5dIIWokIqzeyZMO+Da/OusvCX4KgmGddWyB1LoJza2/Evam0fPXyenqSFez1l" data-form-email="true">
+                        <input type="hidden" value="zaKvneYoV9gBDQa/lyzkTA/QvdmpSOvtqrOLPjF1s0INCpK6q/NLdbLMBKt/0DcrI1l43wHM+MumoSpiKXviPeHgciIHuI15c7MZ5vmM+G39aKx/1mVpkKkRzU6WKPaF" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
