--- a/page7.html
+++ b/page7.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
-                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page11.html">
                         Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/y">free html web templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hrnk8wtwI11sukmNGqegvNbOZQKFg8cC6NP6ZAg7JKxyfk8NtOFXohySX0TZGgGYlm0jeFI10lKhaeFT7aGCoJaoF4criNrCgcxfoHLXgv7+yOuv8V7z3GNGouJmopwH" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kY8QdgMrRq8Zl6/ZBvk8uWWod0T7CMsn4jMU8OvT+vvt8CXpvsn8fbp5SAqe7QMjMthqYLRRh41mmlygSAdB8YIHaCqVJ4w+7IJz2DDafv9kc6tFpTBhKKoeOccbCgzJ" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="Vn/y3sTWxpt0rBHprHmbZUfEnE0tof+0Agq1m0cWwF6lzgzgDjTuH1dMXJ1/I2yscPRg6UKsu2is5Z68qrQ7UwtN3eEBo4XCWuOgkQmCo7cb0KbkBxCwTkNQojg8l1zW" data-form-email="true">
+                        <input type="hidden" value="utr5OnSCIaSQ9evGBVDw7nL5G8EFGUd+iMzigcm2fTKbWSZPbnoV3gFRiCRwRIVMtxQo/1tz0gnvzXPCuIdHpAcKAc+jic8BsW+qA7Xq/AoDS2vjKjplkZsvrzEkC3xP" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
