--- a/page8.html
+++ b/page8.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
-                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page11.html">
                         Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">free amp templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -249,7 +249,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Hnq6qlkmzDS181OWJWXPWNr3hBa/v9/Rcp7d0vfMUrEk4Dq8geJtauy1/tcqXTOZ5gdpp9LjtFgMxH5D6VcjaPvTXm1tcdaBRiGLNCzWH133q2+EyEvFIV1p9EzU/IOa" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q4G/mmRcLyeJao7fTdX1QP2tZsqsJYWFcFdKviGT7Iw5NRsTmF8/B8KfmKgDH+cCgENuiwINAJq/waymYF6HSO4skI2SlCCjkOGNldzUdoeJJgTJsmSWrSSdk0T9bA0e" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -322,7 +322,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="g4JJOGgHs1+zNGR2ysWGi7fY66Y9Vy1uEhblJYwCDaPoJQS4zgCdJ2vbvVaeUb9FeEdKnizNWdqVas2Xoum9EoDc7gn0m+9QjJbLufM2VQwvWKLL5Jcky/b5xOO17hXU" data-form-email="true">
+                        <input type="hidden" value="4o1ofgVfG9WgP98cS2jAHVcjIkYXXTo/zWOKhkL5so1L7IilyBFY9rJdpy1Hx5LKC5PGKrqmIGwjGBTeBSu4h2L9eAobiZCWJyaRFR2F01Axxjci0PVZCnl7D3E7sbTK" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
