--- a/page9.html
+++ b/page9.html
@@ -69,7 +69,7 @@
                         About Us</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2c">
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
-                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page11.html">
                         Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
+<section class="engine"><a href="https://mobirise.me/f">simple web maker</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
 
   
   
@@ -234,7 +234,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eqGZH++6dkHkRBzyhW0l+qlbHloBAHO083ZfIW5i8D0icGhVCBmhBjUlUyZEkxyhM7RvGjcIDDNKV0eqBhJDCxye7a2fbKf88DOYScn721bKyYTTLllK6VgsWHnK/mp0" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="me9I2RuD4190gYaV4RAjm+jlJAm5wIBHxdtuROKxlz7bAIjrpbFMJLJmDRWxCazOY8vjzxEDHk9/fqnABwDgVd07jM4pU3cpfYRxra1bifL8hLpJq35q8WNbZr82O1rv" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -307,7 +307,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="W+qguZY9ifyRm8x+9SjnhweOhTNpCc5GQcLMxuzeIZs7lmTH6psGje9WYKxFDi+ql5MqG0wauAarWsjTg5llFHe6vUAuJrY0G32j1FX0vRgxB33LsMrbD6Hy/xlsYtYC" data-form-email="true">
+                        <input type="hidden" value="LcmJrVSMK7m7eSG1+6SpEBL+o41josBQNM+5Ei+epR6M6DU/8KLNdSvBCRJpEqFbSKUczH+80YJXKQbkrmqxrzxyCnqQvdMeJ5tZZwr6zVY6xeVHQxWggQZsX1cJSXe9" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-29">
                         </div>
