create github pages

--- a/page1.html
+++ b/page1.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/z">best website templates</a></section><section class="mbr-section content4 cid-qWsLarH3LH" id="content4-k">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="mbr-section content4 cid-qWsLarH3LH" id="content4-k">
 
     
 
@@ -259,7 +259,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="NrkgeWcZoU+9UyhwERvsw+RO3GNifGQo3GJgf3zINO5r4m6YgoCli4cpYCZFNMb/a5/mtOoalB/5fY89gLBAA2aS4C/XeRjMW3sy1fojZ8c+qswMK0GoDPHWjuPozC3C" data-form-email="true">
+                        <input type="hidden" value="wu1lWylkwZwVBY3lKKmnivFbuVpZ+19eBS8rfEh6BIi33SJPO1HgnBAuUgCSDORJig2RsfSdYrUg9ZqJWl93tOr6BzeA7RoijkuPzeFeA23u5dJH4Skt6TAAVLBpwBoI" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2o">
                         </div>
