--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">free html web templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/g">how to build a website for free</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kY8QdgMrRq8Zl6/ZBvk8uWWod0T7CMsn4jMU8OvT+vvt8CXpvsn8fbp5SAqe7QMjMthqYLRRh41mmlygSAdB8YIHaCqVJ4w+7IJz2DDafv9kc6tFpTBhKKoeOccbCgzJ" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EtgJEiwThiU4m/MxQfEPHbUxYNRt8a+RXxcDAsd7RpchI/hcZtRKbu1Q6lR03R7Ijrz7LnFWw8+GPpzZWBveEH7InbGUU3UA5HXS8tqFNx6rxQlL5jZIFDwMNz9I9FzS" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="utr5OnSCIaSQ9evGBVDw7nL5G8EFGUd+iMzigcm2fTKbWSZPbnoV3gFRiCRwRIVMtxQo/1tz0gnvzXPCuIdHpAcKAc+jic8BsW+qA7Xq/AoDS2vjKjplkZsvrzEkC3xP" data-form-email="true">
+                        <input type="hidden" value="C9+Ji/BUDpqpQb/S1/kiqR7nO/5CKFnRSMGixWojnpfgcHQqK4yzJVROGyOD2uCvJBbv7eyzwpghFt245oc3vODQcMzWvqGd39ApMs4BxBAiw/pianBb9f379Cjf9K5q" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
