--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/g">how to build a site</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -348,7 +348,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="zaKvneYoV9gBDQa/lyzkTA/QvdmpSOvtqrOLPjF1s0INCpK6q/NLdbLMBKt/0DcrI1l43wHM+MumoSpiKXviPeHgciIHuI15c7MZ5vmM+G39aKx/1mVpkKkRzU6WKPaF" data-form-email="true">
+                        <input type="hidden" value="NxMKpO3tbKFPtSi/RPa+44BKLkJT4JZ9FQ1/a3C32W4AOO3d8UmesM46Yi/DTONqWUPJPGZhyNrxGfcAjTgRlIZgdORYKmQq1XP3W4KH6jhgp4nyPU0ZvVVmgg8I3V4I" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
