--- a/page3.html
+++ b/page3.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">landing page html templates</a></section><section class="mbr-section form1 cid-qWsNBZy9jh" id="form1-u">
+<section class="engine"><a href="https://mobirise.me/k">how to develop free website</a></section><section class="mbr-section form1 cid-qWsNBZy9jh" id="form1-u">
 
     
 
@@ -98,7 +98,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! We will contact you soon.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="E7Wjth7Fgb1gfMLqMGp/9fXJKerri7wZ9U8WDio11Pu+/d5G9ovQIIdnroLplduL4spILn/5o2ZqAnjOC/fVXyynMOQNva5Vj/9cI4kv/hL71kU+gRp8J9H4Hh/Mc00f" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="duowrWT0B97wPjoYlrXD7un7V5yOSQluzzBJ6Er5v5LTJhX39MbCfZ6rz9rCLAoiBm57gR8uoGuRhw7FU9hJCSG0Mtet0Pzeg8AjDsrhRspDjenpVAC0/CCCJlcQp9a3" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -154,8 +154,8 @@
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7"></p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"></p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7">Phone<br>+91-8669071591</p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">Email<br>thetarobotics@gmail.com</p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -168,7 +168,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="pCL9M8JVXE85EDLrlXfhSqtKvMv1R5Jkpz3wPzM7uzvMec1ZjM2AsLsMXV+rwXSbPEsKPzW8EBjyi34+ZFPqxhNmZEPFWZMo4vbDbBXWVCOfHMV277RWv/eLq6oNjMfS" data-form-email="true">
+                        <input type="hidden" value="A9RumvST64nesClXO5NBBCah/aMnnbFxABtWcVfRlS9nf+vjQAqKwK1OQYph561xDL5WYV8mTaFNh1H2FsF+o4IY68CQDUQj1mJaMBWcA50GpOaSO4ya2HcBOvq/zC9l" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2p">
                         </div>
