--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">how to build a site</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/s">free bootstrap theme</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -334,8 +334,8 @@
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7"></p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"></p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"><a href="page3.html">Contact Us</a></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><a href="page11.html">Collaborate</a></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -348,7 +348,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="NxMKpO3tbKFPtSi/RPa+44BKLkJT4JZ9FQ1/a3C32W4AOO3d8UmesM46Yi/DTONqWUPJPGZhyNrxGfcAjTgRlIZgdORYKmQq1XP3W4KH6jhgp4nyPU0ZvVVmgg8I3V4I" data-form-email="true">
+                        <input type="hidden" value="wqyhMJAb0MfxxGz10vF3MP1jGNGu++dGkg6uInymm+U3hFalZUMVADdrWzi3D28ur76+WID3Qrhi/Rnx5qJvKJiOSer83kzrd5JDAMEItVV+n8qr5eeREOVaeGZNygP8" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
