--- a/page1.html
+++ b/page1.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="mbr-section content4 cid-qWsLarH3LH" id="content4-k">
+<section class="engine"><a href="https://mobirise.me/k">develop your own website</a></section><section class="mbr-section content4 cid-qWsLarH3LH" id="content4-k">
 
     
 
@@ -245,8 +245,8 @@
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7"></p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"></p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7"><a href="page3.html">Contact Us</a></p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"><a href="page11.html">Collaborate</a></p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -259,7 +259,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="wu1lWylkwZwVBY3lKKmnivFbuVpZ+19eBS8rfEh6BIi33SJPO1HgnBAuUgCSDORJig2RsfSdYrUg9ZqJWl93tOr6BzeA7RoijkuPzeFeA23u5dJH4Skt6TAAVLBpwBoI" data-form-email="true">
+                        <input type="hidden" value="UDMAXmzgneKMjV/gVvjBCHzLOI+53iXO+e2zfMRsDRQeyLyBlJnpYgACTj4M3uz6luZM3GrFCNG+YgbTSyK8bcZn18qN/ca8IjT+MhMF5trezPXo53p4DeW7GUe5Dvog" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2o">
                         </div>
