--- a/page11.html
+++ b/page11.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/u">bootstrap website templates</a></section><section class="mbr-section form1 cid-qYIwFFJbxP" id="form1-2l">
+<section class="engine"><a href="https://mobirise.me/i">free site creation software</a></section><section class="mbr-section form1 cid-qYIwFFJbxP" id="form1-2l">
 
     
 
@@ -98,7 +98,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! We will contact you soon.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jNXm+2xaQOWmxOciOWhoKBLFmOfwAtIwSwWI7EIcJZcTpeJRBtpoAgKbPfofHABBKtfnDmP0QI6T4pB1H7kbNa9ttfX1UH9HlAcL0apGH+nNN9HRD3E59ipGfiPiStmA" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I9hlb2UVselXYVvKeO8O/SbezD5x3N9Grv93tnXWtXcPWyPwhgrKBs4ZfHGi9fDc3Cf6al6Y1FoAG7CyPM6PvffTHl/8gnPpzIhw4Y65U3uBXYaXWylyE9INdUmsVN1h" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -154,8 +154,10 @@
                 <p class="mbr-text mbr-links-column mbr-fonts-style display-7"></p>
             </div>
             <div class="col-md-3 col-sm-4">
-                <p class="mb-4 mbr-fonts-style foot-title display-7"></p>
-                <p class="mbr-text mbr-fonts-style mbr-links-column display-7"></p>
+                <p class="mb-4 mbr-fonts-style foot-title display-7">Phone
+<br>+91-8669071591</p>
+                <p class="mbr-text mbr-fonts-style mbr-links-column display-7">Email
+<br>thetarobotics@gmail.com</p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 mbr-fonts-style foot-title display-7">
@@ -168,7 +170,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="TDogXnTausOMgYF2DLaI8O/FO8HJA28ZkvLVPiYZXqWs/4nMXiM/0JBr8HeUQdHS+hnENmnFZBkZoW3IiGwy6+ZPJj/dp65U/gXWr9ChkDP8vnB+l2sNBVTFq7xIO0cC" data-form-email="true">
+                        <input type="hidden" value="jxGkw4ZoZzydP7/4GmfMAt9HxSIibFeKUMeRmcUKG4M2K21h90exva+tyYaoNsnWlwfkx6ODp39VHdfWyp4zN9RddhhD6y6TS1f3PbIbOzn+ZdIhRD/p8FSis2RJxWgR" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2q">
                         </div>
