--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/g">how to build a site</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BvEWkj06jexGGxsBHkC3JGkrYE+JgGI+G5SkJmYK2z0BSeKAeoLgwz2Bq/tjGoSAxFQ8pfAY56XB9iqZL7UfFP3ImCUZchi//COjqGriVSkJ0eJoP3p+GlwJVA+Nvi7E" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hLaZe7iC4CDNP9E0f43aBJiqBbdu4xa/ghssSvQ1aWPKQeaIWOmKB5v/wwZgjs++xNwxMdzcZ84lLJme/8WgppQFV5iYyAQMjT/nnGcxJSlKEem4GcsKKaTgsE7I4F+O" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="6ZEGfT2WVoE2yt+yColQjxwNsAhnQs9isJFNJk9WkQVxyDCLv1C5dDR36tTfmROz/KFfF+Fs9WIsFWv7YHFBbQ7LUGVtNcz1/RXyUEBxHwTsFor2lB5NOs6EmSyaU878" data-form-email="true">
+                        <input type="hidden" value="DcwLd/naWRInQ7YzO5E3ewzTwWjx1y4LMdMUVR09sCf37AxZbsGPIehalbKoDqH5svQ12ISVz/mcfXrNG5zYIXP/JXWT+bkI7ifb36UUohs/qxFGkMfN5RDE/xLXNFxE" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
